Update jvm